--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="D:/Oleg_Kuzovkov/Dev/SendEmail/bin/javax.mail.jar" sourcepath="C:/Users/OKuzovkov/.m2/repository/com/sun/mail/javax.mail/1.5.1/javax.mail-1.5.1-sources.jar"/>
-	<classpathentry kind="lib" path="D:/Oleg_Kuzovkov/Dev/SendEmail/bin/ini4j-0.5.2-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/Dev/JAVAWorkspace/SendEmail/lib/javax.mail.jar"/>
+	<classpathentry kind="lib" path="C:/Dev/JAVAWorkspace/SendEmail/lib/ini4j-0.5.2-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
